[workspace]
resolver = "2"

members = [ "srad", "srad-client", "srad-client-rumqtt", "srad-eon", "srad-types", "srad-app",
  "examples/simple-app",
  "examples/simple-node"
]

[workspace.dependencies]
prost = "0.13.0"
prost-build = "0.13.0"
rumqttc = "0.24.0"
tokio = {version="1.44", features=["sync", "signal", "rt-multi-thread"]}
log = "0.4"
bytes = "1.9.0"
thiserror = "1.0.69"
futures = "0.3"
async-trait = "0.1.86"
paste = "1.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
