[workspace]
resolver = "2"

members = [ 
  "srad", 
  "srad-client",
  "srad-client-rumqtt",
  "srad-eon",
  "srad-types",
  "srad-app",
  "examples"
, "codegen", "srad-macros"]

[workspace.package]
edition = "2021"
homepage = "https://github.com/dpazj/srad"
repository = "https://github.com/dpazj/srad"
license = "MIT OR Apache-2.0"
authors = ["dpazj"]

[workspace.dependencies]
prost = "0.13.0"
prost-build = "0.13.0"
rumqttc = "0.24.0"
tokio = {version="1.44", features=["sync", "signal", "rt-multi-thread", "macros", "time"]}
log = "0.4"
bytes = "1.9.0"
thiserror = "1.0.69"
futures = "0.3"
async-trait = "0.1.86"
paste = "1.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
