[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
srad = { version = "0.2.0", path = "../srad" }
log = { workspace = true }
tokio = { workspace = true }
env_logger = "0.11.7"

[[example]]
name = "app-eventloop"
path = "app/eventloop.rs"

[[example]]
name = "generic-app"
path = "app/generic.rs"

[[example]]
name = "simple-node"
path = "node/simple.rs"

[[example]]
name = "node-datatypes"
path = "node/metric_datatypes.rs"
