[package]
name = "examples"
publish = false
edition = "2021"

[dev-dependencies]
srad = { path = "../srad", version = "0.2.2" }
log = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true } 
rand = "0.8"
env_logger = "0.11.7"

[[example]]
name = "app-eventloop"
path = "app/eventloop.rs"

[[example]]
name = "generic-app"
path = "app/generic.rs"

[[example]]
name = "simple-node"
path = "node/simple.rs"

[[example]]
name = "node-datatypes"
path = "node/metric_datatypes.rs"

[[example]]
name = "many-nodes"
path = "node/many_nodes.rs"

[[example]]
name = "node-template"
path = "node/template.rs"
