[package]
name = "srad-app"
version = "0.1.0"
description = "Sparkplug Application SDK"
readme = "README.md"
keywords = ["sparkplug"]
categories = ["embedded", "network-programming", "iot", "mqtt"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { version = "0.1.0", path = "../srad-types" }
srad-client = { version = "0.1.0", path = "../srad-client" }
tokio = { workspace = true }
log = { workspace = true }

[dev-dependencies]
srad-client = { path = "../srad-client", version = "0.1.0", features=["channel-client"] }
tokio = { workspace = true, features = ["full"] }
