[package]
name = "srad-app"
version = "0.2.0"
description = "Sparkplug Application SDK"
readme = "README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { path = "../srad-types", version = "0.2.0" }
srad-client = { path = "../srad-client", version = "0.2.0" }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
srad-client = { path = "../srad-client", version = "0.2.0", features=["channel-client"] }
tokio = { workspace = true, features = ["full"] }
