[package]
name = "srad-client-rumqtt"
version = "0.1.0"
edition = "2021"
description = "Sparkplug Client implementation using Rumqtt"
homepage = "https://github.com/dpazj/srad"
repository = "https://github.com/dpazj/srad"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["sparkplug", "rumqtt"]
categories = ["embedded", "network-programming", "iot", "mqtt"]

[dependencies]
srad-types = { path = "../srad-types" }
srad-client = { path = "../srad-client" }
async-trait = { workspace = true }
log = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
