[package]
name = "srad-client-rumqtt"
version = "0.1.0"
description = "Sparkplug Client implementation using Rumqtt"
readme = "README.md"
keywords = ["sparkplug", "rumqtt"]
categories = ["embedded", "network-programming", "iot", "mqtt"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { version = "0.1.0", path = "../srad-types" }
srad-client = { version = "0.1.0", path = "../srad-client" }
async-trait = { workspace = true }
log = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
