[package]
name = "srad-client-rumqtt"
version = "0.2.0"
description = "Sparkplug Client implementation using Rumqtt"
readme = "README.md"
keywords = ["sparkplug", "rumqtt"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { path = "../srad-types", version = "0.2.0" }
srad-client = { path = "../srad-client", version = "0.2.0" }
async-trait = { workspace = true }
log = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }
