[package]
name = "srad-client"
version = "0.1.0"
description = "Types and traits for implementing Sparkplug Clients"
readme = "README.md"
keywords = ["sparkplug"]
categories = ["embedded", "network-programming", "iot", "mqtt"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[features]
channel-client = []

[dependencies]
srad-types = { version = "0.1.0", path = "../srad-types" }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
