[package]
name = "srad-client"
version = "0.2.0"
description = "Types and traits for implementing Sparkplug Clients"
readme = "README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[features]
channel-client = []

[dependencies]
srad-types = { path = "../srad-types", version = "0.2.0" }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
