[package]
name = "srad-eon"
version = "0.1.0"
description = "Sparkplug Edge Node SDK"
readme = "README.md"
keywords = ["sparkplug"]
categories = ["embedded", "network-programming", "iot", "mqtt"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { version = "0.1.0", path = "../srad-types" }
srad-client = { version = "0.1.0", path = "../srad-client" }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
srad-client = { path = "../srad-client", version = "0.1.0", features=["channel-client"] }
