[package]
name = "srad-eon"
version = "0.1.1"
description = "Sparkplug Edge Node SDK"
readme = "README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { path = "../srad-types", version = "0.1.1" }
srad-client = { path = "../srad-client", version = "0.1.0" }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
srad-client = { path = "../srad-client", version = "0.1.0", features=["channel-client"] }
