[package]
name = "srad-eon"
version = "0.3.0"
description = "Sparkplug Edge Node SDK"
readme = "README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[dependencies]
srad-types = { path = "../srad-types", version = "0.3.0" }
srad-client = { path = "../srad-client", version = "0.3.0" }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
srad-client = { path = "../srad-client", version = "0.3.0", features=["channel-client"] }
