[package]
name = "srad-macros"
version = "0.3.0"
description = "srad macros"
readme = "README.md"
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
srad = { path = "../srad" }
