[package]
name = "srad-types"
version = "0.1.0"
edition = "2021"
description = "Sparkplug types and utilities"
homepage = "https://github.com/dpazj/srad"
repository = "https://github.com/dpazj/srad"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["sparkplug"]
categories = ["embedded", "network-programming", "iot", "mqtt"]

[lib]
name = "srad_types"

[dependencies]
prost = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
