[package]
name = "srad-types"
version = "0.2.1"
description = "Sparkplug types and utilities"
readme = "README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[lib]
name = "srad_types"

[dependencies]
prost = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
