[package]
name = "srad"
version = "0.1.0"
description = "Sparkplug development framework"
readme = "../README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[features]
default = ["eon", "app", "rumqtt-client"]
eon = []
app = []
rumqtt-client = []

[dependencies]
srad-eon = { version = "0.1.0", path = "../srad-eon" }
srad-app = { version = "0.1.0", path = "../srad-app" }
srad-client = { version = "0.1.0", path = "../srad-client" }
srad-client-rumqtt = { version = "0.1.0", path = "../srad-client-rumqtt" }
srad-types = { version = "0.1.0", path = "../srad-types" }

[dev-dependencies]
tokio = { workspace = true }
