[package]
name = "srad"
version = "0.1.1"
description = "Sparkplug development framework"
readme = "../README.md"
keywords = ["sparkplug", "sparkplug-b", "mqtt", "iot", "async"]
categories = ["embedded", "network-programming", "asynchronous"]
edition.workspace = true 
homepage.workspace = true 
repository.workspace = true
license.workspace = true 
authors.workspace = true

[features]
default = ["eon", "app", "rumqtt-client"]
eon = []
app = []
rumqtt-client = []

[dependencies]
srad-eon = { path = "../srad-eon", version = "0.1.1" }
srad-app = { path = "../srad-app", version = "0.1.1" }
srad-client = { path = "../srad-client", version = "0.1.1"}
srad-client-rumqtt = { path = "../srad-client-rumqtt", version = "0.1.1" }
srad-types = { path = "../srad-types", version = "0.1.1" }

[dev-dependencies]
tokio = { workspace = true }
